[gd_scene load_steps=3 format=2]

[ext_resource path="res://test_word_break.gd" type="Script" id=1]
[ext_resource path="res://Themes And Styles/DialogBoxFont.tres" type="DynamicFont" id=2]




[node name="Control" type="RichTextLabel"]
anchor_top = -0.000832384
anchor_right = 1.0
anchor_bottom = 0.999168
margin_top = 0.374573
margin_right = -478.0
margin_bottom = -5.62543
size_flags_horizontal = 0
custom_fonts/mono_font = ExtResource( 2 )
custom_fonts/bold_italics_font = ExtResource( 2 )
custom_fonts/italics_font = ExtResource( 2 )
custom_fonts/bold_font = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
meta_underlined = false
scroll_active = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="meta_clicked" from="." to="." method="_on_Control_meta_clicked"]
[connection signal="meta_hover_ended" from="." to="." method="_on_Control_meta_hover_ended"]
[connection signal="meta_hover_started" from="." to="." method="_on_Control_meta_hover_started"]
